fix(applying-content):fifty-fifty styles for center align text with flexbox

--- a/components/50-50/50-50.less
+++ b/components/50-50/50-50.less
@@ -1,6 +1,6 @@
 @import (reference) '../../styles/variables';
 
-.fifty-fifty {
+.fifty-fifty .container-inner {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -51,4 +51,3 @@
         float: right;
     }
 }
-
